fix: SonarQube 이슈 수정 (Blocker, High, Medium)
- ThumbnailServiceTest: Blocker 이슈 수정 (assertThatNoException 추가)
- ThumbnailServiceImpl: RuntimeException → FileStorageException 변경
- ValidationMessages 상수 클래스 추가하여 중복 문자열 제거
- CourseItem, SnapshotItem: 검증 메시지 상수화
- CourseRelation, SnapshotRelation: 검증 메시지 상수화
- Course, Program: 검증 메시지 상수화
- CourseItemHierarchyResponse: Collectors.toList() → .toList() 변환